--- a/.github/workflows/create-board.yaml
+++ b/.github/workflows/create-board.yaml
@@ -1,6 +1,6 @@
 name: Check All
 
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 jobs:
   build-firmware:
@@ -18,7 +18,36 @@ jobs:
       - name: 2. Copy
         run: |
           bash step2_copy_with_docker.sh
-          
+
       - name: 3. Create Board
         run: |
           bash step3_create_board_with_docker.sh
+
+      - name: Commit fresh board files
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub create-board Action"
+          git add boards/*
+          git status
+          OUT=$(git commit -am "Auto-generated board" 2>&1) || echo "commit failed, finding out why"
+          if echo "$OUT" | grep 'nothing to commit'; then
+            echo "headers: looks like nothing to commit"
+            echo "::set-env name=NOCOMMIT::true"
+            exit 0
+          elif echo "$OUT" | grep 'changed'; then
+            echo "headers: looks like something has changed"
+            exit 0
+          else
+            echo "headers: looks like something unexpected"
+            exit 1
+          fi
+
+      - name: Push board files
+        if: ${{env.NOCOMMIT != 'true'}}
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ github.token }}
+          branch: ${{ steps.extract_branch.outputs.branch }}
+
