--- a/.github/workflows/create-board.yaml
+++ b/.github/workflows/create-board.yaml
@@ -1,38 +1,9 @@
-name: Check All
+name: Create Board
 
 on: [ push, pull_request ]
 
 jobs:
-  build-firmware:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-
-      - name: 1. Build Docker
-        run: |
-          bash hellen-one/bin/step1_build_hellen-one_docker.sh
-
-      - name: 2. Copy
-        run: |
-          bash hellen-one/bin/step2_copy_with_docker.sh
-
-      - name: 3. Create Board
-        run: |
-          bash hellen-one/bin/step3_create_board_with_docker.sh
-
-      - name: Commit fresh board files
-        env:
-          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
-        run: |
-          bash hellen-one/bin/gha-commit.sh
-
-      - name: Push board files
-        if: ${{env.NOCOMMIT != 'true'}}
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ github.token }}
-          branch: ${{ steps.extract_branch.outputs.branch }}
-
+  call-workflow-passing-data:
+    uses: andreika-git/hellen-one/.github/workflows/create-board.yaml@master
+    permissions:
+      contents: write
